# gomoku

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
gui/client/: index.html
gui/server/: index.js  package.json
include/ai/: ai_controller.h  eval.h  negamax.h  utils.h
include/api/: renju_api.h
include/protocols/: cli.h  gomocup.h
include/utils/: globals.h
src/ai/: ai_controller.cc  eval.cc  negamax.cc  utils.cc
src/api/: renju_api.cc
src/main/: main.cc
src/protocols/: cli.cc  gomocup.cc
src/utils/: globals.cc
